# inspect-ai-guide-ko

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  env.example  pyproject.toml  run.py
data/: attack_data.json  attack_sample.json
examples/: 01_hello_world.py  02_security_guide.py  03_multiple_choices.py  04_mathematics.py  05_tool_use.py  06_custom_grader_inst.py  07_custom_grader_template.py  08_multi_turn.py  09_json.py  10_all_attack_test.py
scripts/: 01_hello_world.yaml  02_security_guide.yaml  03_multiple_choices.yaml  04_mathematics.yaml  05_tool_use.yaml  06_custom_grader_inst.yaml  07_custom_grader_template.yaml  08_multi_turn.yaml  09_json.yaml  10_all_attack_test.yaml
